# freeserf

./: CMakeLists.txt  config.h.cmake
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindStdIntTypes.cmake
src/: resource.h
